--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "prisma:seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@hookform/resolvers": "^3.10.0",
     "@prisma/client": "^6.0.0",
     "@radix-ui/react-accordion": "^1.2.1",
@@ -44,12 +47,16 @@
     "@trpc/client": "^11.0.0",
     "@trpc/react-query": "^11.0.0",
     "@trpc/server": "^11.0.0",
+    "@types/formidable": "^3.4.6",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "formidable": "^3.5.4",
     "lucide-react": "^0.460.0",
+    "marked": "^16.4.0",
     "next": "^15.5.4",
     "next-auth": "5.0.0-beta.29",
+    "openai": "^6.3.0",
     "prisma": "^6.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -59,6 +66,7 @@
     "zod": "^3.23.0"
   },
   "devDependencies": {
+    "@tailwindcss/line-clamp": "^0.4.4",
     "@types/bcryptjs": "^2.4.6",
     "@types/node": "^22.7.5",
     "@types/react": "^18.3.11",
