--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,5 +1,5 @@
 [variables]
 NIXPACKS_NODE_VERSION = "23"
 
-[phases.setup]
-nixPkgs = ["nodejs_23", "pnpm-9_x", "openssl", "curl", "wget"]
+# [phases.setup]
+# nixPkgs = ["nodejs_23", "pnpm-9_x", "openssl", "curl", "wget"]
